css/main.css
@font-face {
    font-family: APL;
    src: local("APL385 Unicode"), url("../fonts/APL385/apl385.ttf");
}

/* Custom colors */
:root {
    --md-primary-fg-color: #FF6A13;
    --md-primary-fg-color--dark: #563336;
    --md-default-bg-color: white;
    --md-code-hl-number-color: #797979;
    --dyalog-body-text-color: #232222;
    --dyalog-brand-color-midnight: #003B5C;
    --md-accent-fg-color: var(--dyalog-brand-color-midnight);
}

body {
  color: var(--dyalog-body-text-color);
}

.md-typeset h2, .md-typeset h3, .md-typeset h4 {
  color: var(--dyalog-body-text-color);
}
.md-typeset h2 code, .md-typeset h3 code, .md-typeset h4 code {
    font-size: inherit;
}

/* Table of Contents (TOC) section headings */
 .md-nav__item--section {
    margin-top: 2em;
}
.md-nav .md-nav__item--section > .md-nav__link {
    color: var(--dyalog-brand-color-midnight);
}

.example {
    font-variant-caps: all-small-caps;
    font-size: 1em!important;
    font-weight: 500!important;
}

.language-APL, .language-apl, .language-APL pre code, .language-apl pre code {
    font-family: APL !important;
    line-height: 1.2em !important;
}

.md-typeset code { 
    font-size: 0.9rem;
    line-height: 1.2rem;
    background: none;
}
code, .Dyalog {
    font-family: APL;
}
code[class^="language-"], div[class^="language-"] pre code {
    font-family: "Go Mono", "Courier New", monospace;
    font-size: 1em;
}
code.language-APL, code.language-apl {
    font-family: APL;
}

.md-preset pre {
    background: none!important;
}

.md-typeset pre code {
    background: var(--md-code-bg-color);
}

.md-logo>img {
    width: 7rem !important;
    height: 1.2rem !important;
}

.md-typeset img {
    vertical-align: text-bottom;
}

.copy {
    cursor: grab;
    padding-right:1em;
    &::after {
        content: "⿻";
        color: var(--md-default-bg-color);
        margin-right: -1em;
        pointer-events: none;
    }
    &:active {
        cursor: grabbing;
        &::after {
            content: "⿴";
        }
    }
}

@media screen and (max-width: 76.1875em) {
    .md-logo>img {
        width: 10rem !important;
        height: 1.8rem !important;
    }
}

/* Reduce vertical table spacing, and put in a faint cell border */
.md-typeset table:not([class]) {
    border: none;
    border-collapse: collapse;
}
caption {
    text-wrap: none;
}

th, td {
    border: 1px solid #bbb;
    padding: 4px !important;
    text-align: left;
}

/* Default left alignment for cells without align attribute */
th:not([align]), td:not([align]) {
    text-align: left;
}

/* Respect align attributes from markdown table syntax */
th[align="left"], td[align="left"] {
    text-align: left;
}

th[align="center"], td[align="center"] {
    text-align: center;
}

th[align="right"], td[align="right"] {
    text-align: right;
}

.md-typeset table th, .md-typeset table td {
    font-size: 0.8rem;
}

/* Grid cards used on the home page */
.md-typeset .grid.cards > ul > li {
    padding: 0;
}
.md-typeset .grid.cards .md-button {
    height: 100%;
    padding: 1.2em;
    border: none;
    color: var(--dyalog-body-text-color);
    font-weight: normal;
}
.md-typeset .grid.cards .md-button h2,
.md-typeset .grid.cards .md-button h3,
.md-typeset .grid.cards .md-button h4
{
    margin: 0;
    font-weight: bold;
    color: var(--md-primary-fg-color);
    font-size: 1em;
}
.md-typeset .grid.cards .md-button:hover h2,
.md-typeset .grid.cards .md-button:hover h3,
.md-typeset .grid.cards .md-button:hover h4
{
    color: var(--md-default-bg-color);
}
.md-typeset .grid.cards .md-button:hover {
    color: var(--md-accent-bg-color--light);
}
.md-typeset .grid.cards .md-button:hover img {
    filter: saturate(0%) brightness(200%) contrast(100%);   /* Make CSS icons white */
}

/* Style the heading container for the Language Reference */
.md-typeset h1 {
    display: flex;
    justify-content: space-between;
    align-items: center;
    background-color: #FF6A13;
    padding: 5px 10px; /* Adjusted padding for less vertical whitespace */
    border-radius: 5px; /* Rounded corners */
    color: white;
    overflow-x: auto;

/* Style the left-aligned name */
    & > span:first-child {
        flex-grow: 1;    /* Take up available space */
/* Style the right-aligned command */
        & + code, & + span {
            text-align: right;
            white-space: pre;
            color: inherit;
            font-size: inherit;
            & + a {
                color: inherit;
                font-variant-position: super;
                margin-left: 0.5ex;
            }
        }
    }
}

/* List styles */
.md-typeset li ul li {
  list-style: circle;
}
.md-typeset li ul li ul li {
  list-style: square;
}

/* Compress lists a bit vertcially */
li {
    margin-bottom: 0px !important; 
}

/* Code copy only input (see CONTRIBUTING.md) */
pre+pre>button,
pre+hr {
    display: none !important;
}

pre>code {
    padding-bottom: 1em !important;
}

hr+pre>button {
    top: -0.2em !important;
}

pre+pre,
hr+pre {
    margin-top: -1.8em !important;
}

pre+pre>code,
hr+pre>code {
    padding-top: 0.2em !important;
}
/* ... */

